@startuml
title C4 Code Diagram - Component: internal/service (Jira Analyzer)

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
left to right direction

legend left
  <b>Legend</b>
  Interface - contract inside component
  Class - implementation/data holder
  Relationship labels show dependency intent
  Scope: production code only (no tests, no mocks)
endlegend

package "Component in scope: internal/service" as SVC {
  interface "Repository" as RepoIfc {
    +GetProjectLastUpdated(ctx, projectID)
    +GetStatsByProject(ctx, projectID)
    +GetIssuesDurationByProject(ctx, projectID)
    +GetStatusTransitionsByProject(ctx, projectID)
    +GetDailyActivityByProject(ctx, projectID)
    +GetIssuesTimeSpentByProject(ctx, projectID)
    +GetPriorityStatsByProject(ctx, projectID)
  }

  interface "Cache" as CacheIfc {
    +Get(ctx, projectID, dataType)
    +Set(ctx, projectID, dataType, value)
    +Invalidate(ctx, projectID)
    +GetLastUpdated(ctx, projectID)
    +SetLastUpdated(ctx, projectID, t)
  }

  class "Service" as Service {
    -repository: Repository
    -cache: Cache
    -sfGroup: singleflight.Group
    -lastCheckedAt: map[int]time.Time
    +GetProjectStat(ctx, projectID)
    +GetIssuesDurationHistogram(ctx, projectID)
    +GetStatusHistograms(ctx, projectID)
    +GetDailyActivityChart(ctx, projectID)
    +GetIssuesTimeSpentHistogram(ctx, projectID)
    +GetPriorityChart(ctx, projectID)
    +GetChart(ctx, projectID, chartType)
    +CompareTwoProjects(ctx, lhsProjectID, rhsProjectID)
    +CompareProjectsCharts(ctx, lhsProjectID, rhsProjectID, chartType)
    -isCacheStale(ctx, projectID)
  }

  class "Cache helpers" as CacheHelpers {
    +fetchWithCache[T](ctx, svc, projectID, dataType, fetch)
    +marshalResult[T](val, err)
  }

  class "Histogram builders" as HistBuilders {
    +buildIssuesDurationHistogram(rows)
    +buildIssuesTimeSpentHistogram(rows)
    +buildStatusHistograms(rows)
    +buildDailyActivityChart(rows)
    +buildPriorityChart(rows)
    -buildMultiScaleHistogram(durations)
  }

  class "Chart models" as ChartModels {
    +ChartType
    +HistogramBar
    +IssuesDurationHistogram
    +IssuesTimeSpentHistogram
    +StatusHistogram
    +DailyActivityChart
    +PriorityChart
  }
}



Service --> RepoIfc : reads raw project data
Service --> CacheIfc : reads/writes JSON cache and timestamps
Service --> CacheHelpers : delegates cache-or-fetch flow
Service --> HistBuilders : builds chart DTOs from rows
Service --> ChartModels : returns chart data contracts

HistBuilders --> ChartModels : produces histogram/chart DTOs


@enduml
